{
    "name": "WireManagerControls",
    "maps": [
        {
            "name": "WireManagerActionMap",
            "id": "32b94760-852a-41e8-a7aa-ab7aa458681d",
            "actions": [
                {
                    "name": "ScreenClick",
                    "type": "Button",
                    "id": "0e84589b-68c0-4a7e-bab1-a2a0cd72fde9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PosOnScreen",
                    "type": "Value",
                    "id": "7784109e-ec6e-4c68-ab0f-72f75fb88750",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RemoveWire",
                    "type": "Button",
                    "id": "9e89543d-8e90-41d1-8526-2876920d4f82",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3691e031-b10b-45c4-94ce-d3cd92378c97",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1376697e-65a8-4f65-ba58-e82be64bb456",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PosOnScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29d2af39-1d1b-4f80-bb27-db41816dc495",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveWire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}